minor minor minor minor minor minor changes bro

--- a/views/MruInfo.ejs
+++ b/views/MruInfo.ejs
@@ -1,1 +1,37 @@
-<h1>MRU</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>MRU</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/about.css">
+  </head>
+  <body>
+    <h1 class="headings" style="margin-bottom: 3.5rem; text-align: center">
+      MRU PAGE REPLACEMENT ALGORITHM
+    </h1>
+    <div class="container" style="width: 100rem">
+      <p style="color: white; font-size: 1.25rem">
+        In an operating system that uses paging for memory management, a page
+        replacement algorithm is needed to decide which page needs to be
+        replaced when a new page comes in. In most recently used page
+        replacement algorithm (MRU page replacement algorthm), page replacement
+        will take place by the currently arrived page and it will replace the
+        most recently used page. If the currently arrived page is already
+        present in our frame(collection of pages), it is considered as a page
+        hit and if the currently arrived page is not present in the frame, it is
+        considered as a page fault
+      </p>
+      <button class="sim-button">Simulator</button>
+    </div>
+  </body>
+</html>
