--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -1,1 +1,77 @@
-<h1>ABOUT US</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>About</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="../css/about.css">
+  </head>
+  <body>
+    <h1 class="headings">ABOUT US</h1>
+    <section class="profiles">
+      <a href="#"
+        ><img
+          src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          alt=""
+        />
+
+        <div>
+          <h3>Kavisha Shah</h3>
+          <span class="designation">Member</span>
+          <span>21BCP143</span>
+        </div>
+      </a>
+
+      <a href="#"
+        ><img
+          src="https://images.pexels.com/photos/1681010/pexels-photo-1681010.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          alt=""
+        />
+
+        <div>
+          <h3>Dev Patel</h3>
+          <span class="designation">Member</span>
+          <span>21BCP145</span>
+        </div>
+      </a>
+
+      <a href="#"
+        ><img
+          src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          alt=""
+        />
+
+        <div>
+          <h3>Nisil Patel</h3>
+          <span class="designation">Member</span>
+          <span>21BCP161</span>
+        </div>
+      </a>
+
+      <a href="#"
+        ><img
+          src="https://images.pexels.com/photos/8638757/pexels-photo-8638757.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          alt=""
+        />
+
+        <div>
+          <h3>Prasann Parikh</h3>
+          <span class="designation">Leader</span>
+          <span>21BCP170</span>
+        </div>
+      </a>
+
+      <a href="#"
+        ><img
+          src="https://images.pexels.com/photos/6256327/pexels-photo-6256327.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+          alt=""
+        />
+        <div>
+          <h3>Pratham Modi</h3>
+          <span class="designation">Member</span>
+          <span>21BCP171</span>
+        </div>
+      </a>
+    </section>
+  </body>
+</html>
