--- a/public/css/app.css
+++ b/public/css/app.css
@@ -213,7 +213,7 @@ a {
   font-weight: 300;
 }
 
-#sim-span:hover{
+#sim-span:hover {
   font-size: 3.2rem;
 }
 
@@ -282,7 +282,7 @@ a {
 
 /* toggle buttons */
 
-#myForm .btn-outline:checked + .btn {
+#myForm .btn-outline:checked+.btn {
   border-color: #dd2682;
   background-color: #dd2682;
   color: white;
@@ -356,6 +356,19 @@ a {
   font-weight: 600;
   color: white;
   background-color: #dd2682;
+}
+
+#flash-message {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #f44336;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  z-index: 9999;
 }
 
 /* @keyframes rotate {
