--- a/views/BankerInfo.ejs
+++ b/views/BankerInfo.ejs
@@ -1,1 +1,77 @@
-<h1>BANKER'S INFO</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Banker's Algortihm</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/about.css">
+  </head>
+  <body>
+    <h1 class="headings" style="margin-bottom: 3.5rem">BANKER'S ALGORITHM</h1>
+    <div class="container" style="width: 100rem">
+      <p style="color: white; font-size: 1.25rem">
+        It is a banker algorithm used to avoid deadlock and allocate resources
+        safely to each process in the computer system. The 'S-State' examines
+        all possible tests or activities before deciding whether the allocation
+        should be allowed to each process. It also helps the operating system to
+        successfully share the resources between all the processes. The banker's
+        algorithm is named because it checks whether a person should be
+        sanctioned a loan amount or not to help the bank system safely simulate
+        allocation resources.
+      </p>
+      <div style="display: flex; padding: 2.7rem 5rem 2rem">
+        <div style="width: 30rem; color: white; margin: 0 5rem">
+          <ul>
+            <h1 class="sub-headings">Advantages</h1>
+            <li>
+              Each process should provide information to the operating system
+              for upcoming resource requests, the number of resources, and how
+              long the resources will be held.
+            </li>
+            <li>
+              It helps the operating system manage and control process requests
+              for each type of resource in the computer system.
+            </li>
+            <li>
+              The algorithm has a Max resource attribute that represents
+              indicates each process can hold the maximum number of resources in
+              a system.
+            </li>
+          </ul>
+        </div>
+        <div style="width: 30rem; color: white; margin: 0 2rem">
+          <ul>
+            <h1 class="sub-headings">Disadvantages</h1>
+            <li>
+              It requires a fixed number of processes, and no additional
+              processes can be started in the system while executing the
+              process.
+            </li>
+            <li>
+              The algorithm does no longer allows the processes to exchange its
+              maximum needs while processing its tasks.
+            </li>
+            <li>
+              Each process has to know and state their maximum resource
+              requirement in advance for the system.
+            </li>
+            <li>
+              The number of resource requests can be granted in a finite time,
+              but the time limit for allocating the resources is one year.
+            </li>
+          </ul>
+        </div>
+      </div>
+      <button class="sim-button">Simulator</button>
+    </div>
+  </body>
+</html>
