--- a/views/round-robin.ejs
+++ b/views/round-robin.ejs
@@ -6,6 +6,15 @@
       <h1 class="headings">ROUND ROBIN</h1>
     </div>
 
+    <% if (showMessage) { %>
+      <div id="flash-message"></div>
+      <script src="/js/flashMessage.js"></script>
+      <script>
+        flashMessage('<%= message %>', 5000);
+      </script>
+    <% } %>
+    
+    
     <div class="container" style="text-align: center">
       <form action="/round-robin" method="POST" id="myForm">
         <table class="table table-striped table-dark">
@@ -24,7 +33,6 @@
         <table class="table table-striped table-dark" id="myTable">
           <thead>
             <tr>
-              <th scope="col" style="width: 20rem">Process Name</th>
               <th scope="col" style="width: 20rem">Process ID</th>
               <th scope="col" style="width: 20rem">Arrival Time</th>
               <th scope="col" style="width: 20rem">Burst Time</th>
@@ -33,9 +41,6 @@
           </thead>
           <tbody>
             <tr>
-              <td style="color: #aaaaaa">
-                P<%= idx %>
-              </td>
               <td>
                 <input type="number" min="1" max="20" name="pId" id="pId" required="required" style="width: 200px" />
               </td>
@@ -76,12 +81,10 @@
         function addRow() {
           var table = document.getElementById("myTable");
           var newRow = table.insertRow(-1); // Add row at the end
-          var pNameCell = newRow.insertCell(0);
-          var pIdCell = newRow.insertCell(1);
-          var atCell = newRow.insertCell(2);
-          var btCell = newRow.insertCell(3);
-          var buttonCell = newRow.insertCell(4);
-          pNameCell.innerHTML = '<td style="color: #aaaaaa">P<%=idx%></td>';
+          var pIdCell = newRow.insertCell(0);
+          var atCell = newRow.insertCell(1);
+          var btCell = newRow.insertCell(2);
+          var buttonCell = newRow.insertCell(3);
           pIdCell.innerHTML = '<input type="text" name="pId" value="" required="required">';
           atCell.innerHTML = '<input type="text" name="at" value="" required="required">';
           btCell.innerHTML = '<input type="text" name="bt" value="" required="required">';
