removed unnecessary things

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -1,10 +1,10 @@
 <%- include('./includes/head.ejs') %>
 
-  <!-- <style>
-  body {
-    background-image: url("imgs/image.png");
+  <style>
+  #img{
+    width: 200px;
   }
-</style> -->
+</style>
 
   <h1 class="headings">ABOUT US</h1>
   <section class="profiles">
