added three games in the bored section

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -82,6 +82,31 @@
             <a class="nav-link" href="/aboutUs">About</a>
           </div>
         </div>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                >Bored ?</a
+              >
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="/game-1">Game-1</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="/game-2">Game-2</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="/game-3">Game-3</a>
+                </li>
+              </ul>
+            </li>
+            <a class="nav-link" href="/aboutUs">About</a>
+          </div>
+        </div>
       </nav>
     </header>
 
