--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -20,9 +20,9 @@
     <a href="#" id="A"><img src="imgs/Dev.jpeg" alt="" id="img" />
 
       <div>
-        <h3 id="h3">Nishil Patel</h3>
+        <h3 id="h3">Dev Patel</h3>
         <span class="designation" id="span">Member</span>
-        <span id="span">21BCP161</span>
+        <span id="span">21BCP145</span>
       </div>
     </a>
 
