--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -80,9 +80,10 @@
               </ul>
             </li>
             <a class="nav-link" href="/aboutUs">About</a>
+            <a class="nav-link" href="/bored">Bored?</a>
           </div>
         </div>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <li class="nav-item dropdown">
               <a
@@ -105,7 +106,7 @@
               </ul>
             </li>
           </div>
-        </div>
+        </div> -->
       </nav>
     </header>
 
