small changes to bored page and some deletions

--- a/views/bored.ejs
+++ b/views/bored.ejs
@@ -6,13 +6,16 @@
 </style>
 <div class="center">
   <h1 class="headings2">Bored<span>?</span></h1>
-  <div class="container" style="width: 100rem">
-    <p style="color: white; font-size: 1.25rem">
-      Are you bored already with the algorithms and simulations? here are a few
-      brain games created by <span>TEAM7</span> to freshen up your mood and
-      charge up your energy.
-    </p>
-    <h1 class="sub-headings2">Blinking Blocks</h1>
+  <div class="container">
+      <p style="color: white; font-size: 1.25rem">
+        Are you bored already with the algorithms and simulations? here are a few
+        brain games created by <span>TEAM7</span> to freshen up your mood and charge
+        up your energy.
+  </div>
+  </p>
+  <div class="container" style="width: 100rem; text-align: left">
+    <h1 class="sub-headings2">Blinking Blocks</h1> 
+    <button onclick="location.href = '/game-3';" style="position: absolute; top: 390px; margin-left: 290px; border-radius: 10px;"><img src="imgs/block.gif"  style="height: 50px; width: 50px;" alt=""></button>
     <p style="color: white; font-size: 1.25rem">
       This is a game of memory! You will be shown four blocks and once you start
       the game one of them will blink and you will have to press that block
@@ -20,7 +23,7 @@
       have to click all the previously blinked blocks in the correct order so
       you can forward to the next level. Else the game will restart.
     </p>
-    <h1 class="sub-headings2">Name</h1>
+    <h1 class="sub-headings2">Match The Arrow</h1>
     <p style="color: white; font-size: 1.25rem">
       This is a game of accuracy and alertness. On the screen there will be
       arrows shown. if the arrow is having red background color you have to
