--- a/views/index3.ejs
+++ b/views/index3.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Simon Says Game</title>
+    <title>Blinking Blocks</title>
     <link rel="stylesheet" href="../css/style3.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Press+Start+2P"
