made a dotenv file, small changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
       <p style="font-size: 100px;">Game Over</p>
       <p id="game-over-text"></p>
       <button id="play-again" onclick="restartGame()">Play Again</button>
-      <button id="exit">Exit</button>
+      <button onclick="location.href = '/bored';" id="exit">Exit</button>
     </div>
     <script src="../js/game.js"></script>
     <script src="https://kit.fontawesome.com/226c829c6f.js" crossorigin="anonymous"></script>
