--- a/views/bored.ejs
+++ b/views/bored.ejs
@@ -24,6 +24,7 @@
       you can forward to the next level. Else the game will restart.
     </p>
     <h1 class="sub-headings2">Match The Arrow</h1>
+    <button onclick="location.href = '/game-1';" style="position: absolute; top: 5  90px; margin-left: 290px; border-radius: 10px; height: 50px; width: 50px;"><i class="fa-duotone fa-arrow-right fa-spin" style="--fa-primary-color: #ff6384; --fa-secondary-color: #36a2eb; --fa-secondary-opacity: 0.8;"></i></button>
     <p style="color: white; font-size: 1.25rem">
       This is a game of accuracy and alertness. On the screen there will be
       arrows shown. if the arrow is having red background color you have to
@@ -32,7 +33,7 @@
       arrow key from your keyboard that points in the same direction as shown on
       the screen
     </p>
-    <h1 class="sub-headings2">RGB Guesser</h1>
+    <h1 class="sub-headings2">RGB Guesser</h1> <button onclick="location.href = '/game-2';" style="position: absolute; top: 710px; margin-left: 260px; border-radius: 10px;"><img src="imgs/rgb-guesser.png"  style="height: 50px; width: 50px;" alt=""></button>
     <p style="color: white; font-size: 1.25rem">
       This is a very simple game that tests your knowledge in color theory.
       There will be an RGB value displayed on the screen and nine blocks below
