--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -1,5 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
+<script src="https://kit.fontawesome.com/226c829c6f.js" crossorigin="anonymous"></script>
 <script>
     const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
 
