--- a/views/bored.ejs
+++ b/views/bored.ejs
@@ -5,27 +5,30 @@
   }
 </style>
 <div class="center">
-  <h1 class="headings2">Bored<span>?</span></h1>
+  <h1 style="margin-bottom: 10px;" class="headings2">Bored<span>?</span></h1>
   <div class="container">
-      <p style="color: white; font-size: 1.25rem">
+      <p style="color: white; font-size: 1.25rem; margin-bottom: 70px;">
         Are you bored already with the algorithms and simulations? here are a few
         brain games created by <span>TEAM7</span> to freshen up your mood and charge
         up your energy.
   </div>
   </p>
-  <div class="container" style="width: 100rem; text-align: left">
-    <h1 class="sub-headings2">Blinking Blocks</h1> 
-    <button onclick="location.href = '/game-3';" style="position: absolute; top: 390px; margin-left: 290px; border-radius: 10px;"><img src="imgs/block.gif"  style="height: 50px; width: 50px;" alt=""></button>
-    <p style="color: white; font-size: 1.25rem">
+  <div class="container" style="width: 100rem;">
+    <button onclick="location.href = '/game-3';" style="position: absolute; top: 320px; right: 125px;margin-left: 290px; border-radius: 10px;height:150px; width: 150px;"><img src="imgs/block.gif"  style="height: 140px; width: 140px;" alt=""></button>
+    <div class="container" style="width: 70rem; text-align: right; position: relative; right: 75px">
+    <h1 onclick="location.href = '/game-3';" style="cursor:pointer;" class="sub-headings2">Blinking Blocks</h1> 
+    <p style="color: white; font-size: 1.25rem;">
       This is a game of memory! You will be shown four blocks and once you start
       the game one of them will blink and you will have to press that block
       after you press the correct block another block will blink and you will
       have to click all the previously blinked blocks in the correct order so
       you can forward to the next level. Else the game will restart.
     </p>
-    <h1 class="sub-headings2">Match The Arrow</h1>
-    <button onclick="location.href = '/game-1';" style="position: absolute; top: 5  90px; margin-left: 290px; border-radius: 10px; height: 50px; width: 50px;"><i class="fa-duotone fa-arrow-right fa-spin" style="--fa-primary-color: #ff6384; --fa-secondary-color: #36a2eb; --fa-secondary-opacity: 0.8;"></i></button>
-    <p style="color: white; font-size: 1.25rem">
+  </div>
+    <div class="container" style="width: 75rem; text-align: left; margin-top: 50px;">
+    <h1 class="sub-headings2" onclick="location.href = '/game-1';" style="position: relative; left: 100px; cursor: pointer;">Match The Arrow</h1>
+    <button onclick="location.href = '/game-1';" style=" margin-left: 290px; border-radius: 10px; height: 150px; width: 150px; padding-top:20px; padding-right: 10px; position: absolute; left: -180px; top: 520px"><i class="fa-2xl fa-solid fa-arrow-right fa-spin" style="color: black;font-size: 100px;"></i></button>
+    <p style="color: white; font-size: 1.25rem; position: relative; left: 100px">
       This is a game of accuracy and alertness. On the screen there will be
       arrows shown. if the arrow is having red background color you have to
       press the arrow from your keyboard that points in the opposite direction
@@ -33,7 +36,21 @@
       arrow key from your keyboard that points in the same direction as shown on
       the screen
     </p>
+  <!-- </div>
     <h1 class="sub-headings2">RGB Guesser</h1> <button onclick="location.href = '/game-2';" style="position: absolute; top: 710px; margin-left: 260px; border-radius: 10px;"><img src="imgs/rgb-guesser.png"  style="height: 50px; width: 50px;" alt=""></button>
+    <p style="color: white; font-size: 1.25rem">
+      This is a very simple game that tests your knowledge in color theory.
+      There will be an RGB value displayed on the screen and nine blocks below
+      that, you have to select the block with the same RGB value shown on the
+      screen and if you do so all the blocks on the screen will turn into that
+      color, and if you fail to detect the correct block that block will
+      disappear, giving you more tries to find the correct block and this will
+      happen until you find the correct block.
+    </p>
+  </div> -->
+  <button onclick="location.href = '/game-2';" style="position: absolute; top: 730px; right: 125px;margin-left: 290px; border-radius: 10px;height:150px; width: 150px;"><img src="imgs/rgb-guesser.png" style="height: 140px; width: 140px;" alt=""></button>
+    <div class="container" style="width: 70rem; text-align: right; position: relative; right: 75px; margin-top: 50px; margin-bottom: 60px;">
+    <h1 onclick="location.href = '/game-2';" style="cursor: pointer;" class="sub-headings2">RGB Guesser</h1> 
     <p style="color: white; font-size: 1.25rem">
       This is a very simple game that tests your knowledge in color theory.
       There will be an RGB value displayed on the screen and nine blocks below
